<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.nicolashoareau_toulousewcs.appliwcsprojet.activity.SignInActivity"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/logo_wcs"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        app:srcCompat="@drawable/cerf" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/wcsOrange"
        android:text="@string/sign_in"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_forgot_pass"
        android:layout_width="160dp"
        android:layout_height="25dp"
        android:background="@null"
        android:text="@string/forgot_pass"
        android:textAllCaps="false"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_already_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:text="@string/already_registered"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/msg_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/wcsGreen"/>
</LinearLayout>
