<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginBottom="32dp"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:gravity="center"
    tools:context="fr.nicolashoareau_toulousewcs.appliwcsprojet.activity.CreateRequestActivity">

    <TextView
        android:id="@+id/tv_date_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/my_request"
        android:inputType="textCapSentences"
        android:lines="3"
        android:maxLines="3"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btn_validate_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/wcsOrange"
        android:text="@string/validate"
        android:textColor="#fff"
        android:layout_gravity="center"/>

</LinearLayout>
